# torrent-manager

./: .gitignore  Cargo.toml
src/: cli.rs  main.rs
src/meta/: mod.rs
src/req/: mod.rs
